--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/hexalang/hexa-vscode-bundle.git"
+    },
+    "bugs": {
+        "url": "https://github.com/hexalang/hexa-vscode-bundle/issues"
+    },
+    "dependencies": {
+        "vscode": "^1.1.21",
     }
 }
