--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 # Set default behavior to automatically normalize line endings.
 * text=auto
-
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.ico binary
