--- a/language-configuration.json
+++ b/language-configuration.json
@@ -25,34 +25,48 @@
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
-        [
-            "{",
-            "}"
-        ],
-        [
-            "[",
-            "]"
-        ],
-        [
-            "(",
-            ")"
-        ],
-        [
-            "<",
-            ">"
-        ],
-        [
-            "'",
-            "'"
-        ],
-        [
-            "\"",
-            "\""
-        ],
-        [
-            "`",
-            "`"
-        ]
+        {
+            "open": "{",
+            "close": "}"
+        },
+        {
+            "open": "[",
+            "close": "]"
+        },
+        {
+            "open": "(",
+            "close": ")"
+        },
+        {
+            "open": "'",
+            "close": "'",
+            "notIn": [
+                "string",
+                "comment"
+            ]
+        },
+        {
+            "open": "\"",
+            "close": "\"",
+            "notIn": [
+                "string"
+            ]
+        },
+        {
+            "open": "`",
+            "close": "`",
+            "notIn": [
+                "string",
+                "comment"
+            ]
+        },
+        {
+            "open": "/**",
+            "close": " */",
+            "notIn": [
+                "string"
+            ]
+        }
     ],
     // symbols that that can be used to surround a selection
     "surroundingPairs": [
@@ -84,5 +98,6 @@
             "`",
             "`"
         ]
-    ]
+    ],
+    "autoCloseBefore": ".,:}])>='\"` \n\t",
 }
