--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
         "url": "https://github.com/hexalang/hexa-vscode-bundle/issues"
     },
     "dependencies": {
-        "vscode": "^1.1.21",
+        "vscode": "^1.1.21"
     }
 }
