--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "javascript.format.semicolons": "remove"
 }
