--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "javascript.format.semicolons": "remove",
     "cSpell.words": [
         "hexa"
-    ]
+    ],
+    "editor.formatOnPaste": true
 }
