--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bugs": {
         "url": "https://github.com/hexalang/hexa-vscode-bundle/issues"
     },
-    "dependencies": {
+    "devDependencies": {
+        "vsce": "^2.9.1"
     }
 }
