--- a/.github/workflows/building-bundle.yml
+++ b/.github/workflows/building-bundle.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ windows-latest, ubuntu-latest, macos-latest ]
+        os: [ windows-latest ]
         node-version: [ 16.x ]
 
     steps:
