[CI] Use github.sha as artifact suffix

--- a/.github/workflows/building-bundle.yml
+++ b/.github/workflows/building-bundle.yml
@@ -32,5 +32,5 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: vshexa-${{ matrix.os }}
+        name: vshexa-${{ github.sha }}
         path: '*.vsix'
