--- a/.github/workflows/building-bundle.yml
+++ b/.github/workflows/building-bundle.yml
@@ -1,6 +1,13 @@
 name: Building bundle
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches: [ '**' ]
+  pull_request:
+    branches: [ '**' ]
+  release:
+    types:
+    - created
 
 jobs:
   build-all:
@@ -34,3 +41,33 @@ jobs:
       with:
         name: vshexa-${{ github.sha }}
         path: '*.vsix'
+
+  deploy-all:
+    name: 'Deploying'
+    needs: build-all
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ windows-latest ]
+        node-version: [ 16.x ]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+
+    - name: Publish Hexa VSCode bundle
+      if: startsWith(github.ref, 'refs/tags/releases/')
+      run: |
+        npx vsce publish
+      env:
+        VSCE_PAT: ${{ secrets.VSCE_PAT }}
