--- a/.github/workflows/building-bundle.yml
+++ b/.github/workflows/building-bundle.yml
@@ -64,7 +64,7 @@ jobs:
         cache: 'npm'
 
     - name: Publish Hexa VSCode bundle
-      if: startsWith(github.ref, 'refs/tags/releases/')
+      if: github.event_name == 'release' && github.event.action == 'created'
       run: |
         npx vsce publish
       env:
