--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"onLanguage:hexa"
 	],
 	"main": "./extension/extension.js",
+	"browser": "./extension/web.js",
 	"categories": [
 		"Programming Languages",
 		"Linters"
