--- a/language-configuration.json
+++ b/language-configuration.json
@@ -19,6 +19,10 @@
             "]"
         ],
         [
+            "\\(",
+            ")"
+        ],
+        [
             "(",
             ")"
         ]
@@ -41,8 +45,7 @@
             "open": "'",
             "close": "'",
             "notIn": [
-                "string",
-                "comment"
+                "string"
             ]
         },
         {
@@ -56,13 +59,12 @@
             "open": "`",
             "close": "`",
             "notIn": [
-                "string",
-                "comment"
+                "string"
             ]
         },
         {
-            "open": "/**",
-            "close": " */",
+            "open": "/*",
+            "close": "*/",
             "notIn": [
                 "string"
             ]
@@ -97,6 +99,10 @@
         [
             "`",
             "`"
+        ],
+        [
+            "*",
+            "*"
         ]
     ],
     "autoCloseBefore": ".,:}])>='\"` \n\t",
