--- a/.github/workflows/building-bundle.yml
+++ b/.github/workflows/building-bundle.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest ]
-        node-version: [ 16.x ]
+        node-version: [ 18 ]
 
     steps:
     - name: Checkout
@@ -25,7 +25,7 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
